--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -27,6 +27,16 @@
             android:layout_alignParentTop="false"
             android:layout_centerInParent="true">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/linearLayout"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/textViewResultado"
+                android:gravity="center_vertical"
+                android:fontFamily="casual"
+                android:layout_gravity="center_horizontal" />
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -44,10 +54,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:id="@+id/editTextEmail"
-                    android:hint="Digite seu e-mail"
                     android:inputType="textEmailAddress"
                     android:fontFamily="casual"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:hint="@string/hintDigiteSeuEmail" />
 
             </LinearLayout>
 
@@ -69,7 +79,7 @@
                     android:inputType="textPassword"
                     android:ems="10"
                     android:id="@+id/editTextSenha"
-                    android:hint="Digite sua senha"
+                    android:hint="@string/hintDigiteSuaSenha"
                     android:fontFamily="casual"
                     android:layout_weight="1" />
 
@@ -82,10 +92,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/linearLayout">
 
             <Button
-                android:layout_height="85dp"
+                android:layout_height="74dp"
                 android:id="@+id/buttonAcessar"
                 android:text="@string/buttonAcessar"
                 android:layout_width="wrap_content"
