--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -35,7 +35,8 @@
                 android:id="@+id/textViewResultado"
                 android:gravity="center_vertical"
                 android:fontFamily="casual"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -125,7 +126,9 @@
             android:layout_alignWithParentIfMissing="false"
             android:layout_centerInParent="false"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:background="@color/colorPrimary"
+            android:layout_above="@+id/linearLayout2">
 
             <ImageView
                 android:layout_width="129dp"
@@ -142,7 +145,11 @@
                 android:gravity="center"
                 android:layout_below="@+id/imageViewBemVindo"
                 android:layout_alignParentStart="true"
-                android:fontFamily="casual" />
+                android:fontFamily="casual"
+                android:textSize="16sp"
+                android:textColor="?attr/colorBackgroundFloating"
+                android:textStyle="normal|bold"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
