--- a/app/src/main/res/layout/activity_tarefa.xml
+++ b/app/src/main/res/layout/activity_tarefa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_tarefa"
     android:layout_width="match_parent"
@@ -9,4 +10,182 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="android.ucam.aula.projeto.projetop1.TarefaActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@android:drawable/checkbox_on_background"
+                android:id="@+id/imageView2"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="@string/textViewTarefa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewTarefa"
+                android:layout_weight="1"
+                android:fontFamily="casual"
+                android:textSize="18sp"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:textAlignment="center"
+                android:textStyle="normal|bold"
+                android:textColor="?attr/colorBackgroundFloating" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="56dp"
+            android:layout_height="370dp">
+
+            <TextView
+                android:text="@string/textViewSeleTare"
+                android:layout_width="match_parent"
+                android:id="@+id/textViewSeleTare"
+                android:fontFamily="casual"
+                android:textStyle="normal|bold"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:layout_height="40dp" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:id="@+id/spinnerCurso"
+                android:entries="@array/lista_cursos_tarefa"
+                android:layout_height="40dp" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:id="@+id/spinnerAula"
+                android:entries="@array/lista_aulas"
+                android:layout_height="40dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/textViewAula"
+                android:fontFamily="casual"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textStyle="normal|bold"
+                android:layout_height="55dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:text="@string/textViewExecFeito"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textViewExercicioFeito"
+                    android:layout_weight="1"
+                    android:fontFamily="casual"
+                    android:gravity="center" />
+
+                <CheckBox
+                    android:layout_width="105dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBoxExec"
+                    android:gravity="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:text="@string/textViewLabEnv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textViewLaboratorioEnviado"
+                    android:layout_weight="1"
+                    android:fontFamily="casual"
+                    android:gravity="center" />
+
+                <CheckBox
+                    android:layout_width="105dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBoxLab"
+                    android:gravity="center" />
+
+            </LinearLayout>
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:id="@+id/progressBarTarefas"
+                android:layout_height="40dp" />
+        </LinearLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Button
+                    android:text="@string/buttonProgresso"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/buttonProgresso"
+                    android:width="1dp"
+                    android:layout_weight="1"
+                    android:elevation="0dp"
+                    android:background="@android:drawable/dialog_holo_light_frame" />
+
+                <Button
+                    android:text="@string/buttonCadastro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/buttonCadastro"
+                    android:width="1dp"
+                    android:layout_weight="1"
+                    android:elevation="0dp"
+                    android:background="@android:drawable/dialog_holo_light_frame" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:text="@string/buttonSair"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/buttonSair"
+                    android:width="1dp"
+                    android:layout_weight="1"
+                    android:elevation="0dp"
+                    android:background="@android:drawable/dialog_holo_light_frame" />
+            </TableRow>
+
+        </TableLayout>
+
+    </RelativeLayout>
+
 </RelativeLayout>
