--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -48,11 +48,41 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="50dp">
+            android:layout_alignParentBottom="true">
+
+            <Button
+                android:id="@+id/buttonCadCadastrar"
+                android:text="@string/buttonCadCadastrar"
+                android:layout_width="wrap_content"
+                android:width="1dp"
+                android:elevation="0dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_weight="1"
+                android:layout_height="74dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="74dp"
+                android:id="@+id/buttonCadLimpar"
+                android:text="@string/buttonLimpar"
+                android:width="1dp"
+                android:layout_weight="1"
+                android:elevation="0dp"
+                android:background="@android:drawable/dialog_holo_light_frame" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@+id/linearLayout4"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="69dp">
 
             <EditText
                 android:layout_width="match_parent"
@@ -96,39 +126,10 @@
 
             <Spinner
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/spinnerCursos"
-                android:entries="@array/lista_cursos" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true">
-
-            <Button
-                android:layout_height="wrap_content"
-                android:id="@+id/buttonCadCadastrar"
-                android:text="@string/buttonCadCadastrar"
-                android:layout_width="wrap_content"
-                android:width="1dp"
-                android:elevation="0dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:layout_weight="1" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/buttonCadLimpar"
-                android:text="@string/buttonLimpar"
-                android:width="1dp"
+                android:entries="@array/lista_cursos"
                 android:layout_weight="1"
-                android:elevation="0dp"
-                android:background="@android:drawable/dialog_holo_light_frame" />
-
+                android:layout_height="60dp" />
         </LinearLayout>
     </RelativeLayout>
 
