--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -18,77 +18,6 @@
         android:layout_alignParentStart="true">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1"
-            android:layout_alignParentStart="false"
-            android:layout_centerVertical="false"
-            android:layout_alignParentTop="false"
-            android:layout_centerInParent="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/linearLayout"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/textViewResultado"
-                android:gravity="center_vertical"
-                android:fontFamily="casual"
-                android:layout_gravity="center_horizontal"
-                android:textSize="14sp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/ic_dialog_email"
-                    android:id="@+id/imageView4"
-                    android:layout_width="45dp" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:id="@+id/editTextEmail"
-                    android:inputType="textEmailAddress"
-                    android:fontFamily="casual"
-                    android:layout_weight="1"
-                    android:hint="@string/hintDigiteSeuEmail" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_height="match_parent"
-                    app:srcCompat="@android:drawable/ic_lock_idle_lock"
-                    android:id="@+id/imageView5"
-                    android:layout_width="45dp" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:id="@+id/editTextSenha"
-                    android:hint="@string/hintDigiteSuaSenha"
-                    android:fontFamily="casual"
-                    android:layout_weight="1" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -150,6 +79,76 @@
                 android:textColor="?attr/colorBackgroundFloating"
                 android:textStyle="normal|bold"
                 android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:weightSum="1"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="170dp"
+            android:layout_below="@+id/linearLayout6"
+            android:layout_alignParentStart="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/linearLayout"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/textViewResultado"
+                android:gravity="center_vertical"
+                android:fontFamily="casual"
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@android:drawable/ic_dialog_email"
+                    android:id="@+id/imageView4"
+                    android:layout_width="45dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:id="@+id/editTextEmail"
+                    android:inputType="textEmailAddress"
+                    android:fontFamily="casual"
+                    android:layout_weight="1"
+                    android:hint="@string/hintDigiteSeuEmail" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_height="match_parent"
+                    app:srcCompat="@android:drawable/ic_lock_idle_lock"
+                    android:id="@+id/imageView5"
+                    android:layout_width="45dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:id="@+id/editTextSenha"
+                    android:hint="@string/hintDigiteSuaSenha"
+                    android:fontFamily="casual"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
